# engram

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BRAIN_ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTRACTION_QUALITY.md  LICENSE  Makefile  README.md  SYSTEM_MAP.md  Tech_Spec_v2.md  config.example.yaml  docker-compose.helix.yml  docker-compose.yml  fly.toml
native/helix-repo/: Cargo.toml  PATCHES.md  README.md  clippy_check.sh
native/helix-repo/helix-db/: Cargo.toml  build.rs
native/helix-repo/helix-macros/: Cargo.toml
native/helix-repo/helix-python/: Cargo.toml  build.rs  pyproject.toml
server/: .dockerignore  Dockerfile  pyproject.toml
server/benchmarks/: ab_results.json  ab_results_embeddings.json  ab_results_embeddings_post_fix.json  ab_results_post_fix.json  fullstack_1k.json  fullstack_emb_1k.json  fullstack_emb_5k.json  fullstack_fixed_emb_1k.json  scale_1k.json  scale_5k.json  scale_5k_smoke.json  week2_mock.json  week3_mock.json  week8_live.json
server/data/connectdots/: connectdots.json
server/data/graphthesis/: film_producer_life.json  grad_research_life.json  smb_owner.json  swe_career_life.json  tech_consulting_life.json
server/docs/: improvement_roadmap.md
server/engram/: __init__.py  __main__.py  backup_cli.py  benchmark_loader.py  brain_cli.py  brain_runtime.py  captain_cli.py  config.py  consolidation_trigger.py  doctor.py  entity_dedup_policy.py  graph_manager.py  harness_adoption.py  harness_cli.py  hygiene_cli.py  hygiene_ops.py  index_cli.py  lifecycle_cli.py  lifecycle_summary.py  loop_adjustment.py  loop_cli.py  main.py  ops_metrics.py  public_surface_policy.py  setup.py  worker.py
server/engram/activation/: __init__.py  actr.py  bfs.py  community.py  context_gate.py  engine.py  feedback.py  neuroplasticity.py  ppr.py  spreading.py  strategy.py
server/engram/api/: activation.py  admin.py  consolidation.py  conversations.py  deps.py  entities.py  episodes.py  evaluation.py  graph.py  health.py  health_runtime.py  health_surface.py  hygiene.py  ingest_ws.py  knowledge.py  lifecycle.py  loop.py  stats.py  storage.py  websocket.py  websocket_auth.py  websocket_runtime.py  websocket_surface.py
server/engram/atlas/: builder.py  service.py
server/engram/axi/: __init__.py  budgets.py  cli.py  client.py  hooks.py  surfaces.py  toon.py
server/engram/benchmark/: __init__.py  corpus.py  echo_chamber.py  memory_need.py  methods.py  metrics.py
server/engram/consolidation/: __init__.py  __main__.py  audit_reader.py  calibration.py  capabilities.py  cli.py  completion.py  cue_hygiene.py  drain_evidence.py  drain_evidence_cli.py  engine.py  (+16 more)
server/results/: graphthesis_grad_research_life.json  graphthesis_smb_owner.json  graphthesis_swe.json  longmemeval_agent_sdk_cal.json  longmemeval_agent_sdk_cal_cp.json  longmemeval_baseline.json  longmemeval_baseline_v2.json  longmemeval_baseline_v2_cp.json  longmemeval_final.json  longmemeval_final.md  longmemeval_native_gemini.json  longmemeval_native_gemini.md  longmemeval_native_gemini_v2.json  longmemeval_native_gemini_v2.md  longmemeval_native_gemini_v3.json  longmemeval_native_gemini_v3.md  longmemeval_oracle_full.json  longmemeval_oracle_full.md  longmemeval_oracle_smoke.json  longmemeval_oracle_smoke.md  longmemeval_oracle_validate.json  longmemeval_oracle_validate.md  longmemeval_v2_multisignal.json  longmemeval_v2_multisignal.md  longmemeval_v3_all_fixes.json  longmemeval_v3_all_fixes.md  longmemeval_v4_llm_free.json  longmemeval_v4_llm_free.md  longmemeval_v5_fixed_pipeline.json  longmemeval_v5_fixed_pipeline.md  longmemeval_v7_bm25_fix.json  longmemeval_v7_bm25_fix.md  longmemeval_v8_cal_checkpoint.json  team_discussion.md
server/scripts/: benchmark_ab.py  benchmark_agent_sdk.py  benchmark_backends.py  benchmark_baseline.py  benchmark_depth_tier.py  benchmark_echo_chamber.py  benchmark_graph_thesis.py  benchmark_locomo.py  benchmark_longmemeval.py  benchmark_showcase.py  benchmark_working_memory.py  brain_loop_report.py  build_connectdots_dataset.py  diag_graph_m3.py  diagnose_spreading.py  lme_progress.py  projected_consolidated_smoke.py  report_identifier_merge_suspects.py  simulate.py  test_sdk.py  test_sdk_long.py  test_sdk_real.py
server/tests/: conftest.py  test_activation_api.py  test_activation_engine.py  test_activation_signature_gate.py  test_activation_snapshot_paths.py  test_activation_snapshot_periodic.py  test_actr_spreading.py  test_adjudication_metrics.py  test_adjudication_surface.py  test_agent_adoption_surfaces.py  test_agent_annotations_fixes.py  test_api_endpoints.py  test_apply_graph_write_fixes.py  test_apply_write_path_drop_fixes.py  test_artifact_project_path_normalize.py  test_artifact_search_class_filter.py  test_artifact_search_service.py  test_artifact_search_surface.py  test_atlas_surface.py  test_authority_cli.py  test_auto_observe.py  test_auto_recall_policy.py  test_autorecall.py  test_axi_public_surface.py  test_backup_cli.py  test_backup_compact.py  test_benchmark.py  test_benchmark_embedding_eval.py  test_benchmark_loader.py  test_bm25_breaker_persistence.py  test_brain_availability.py  test_brain_loop_report.py  test_brain_watchdog.py  test_briefing_degraded_fastpath.py  test_build_full_auto_recall_integration.py  test_calibrate.py  test_candidate_pool.py  test_candidate_retrieval.py  test_canonicalize.py  test_captain_export.py  (+347 more)
(+716 files in other folders)
