[project]
name = "engram"
version = "0.1.0"
description = "Persistent memory layer for AI agents — temporal knowledge graphs with ACT-R retrieval and offline consolidation"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Engram Contributors"}]
keywords = ["memory", "ai-agents", "knowledge-graph", "mcp", "consolidation", "activation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "mcp>=1.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "cryptography>=43.0.0",
    "rapidfuzz>=3.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "fastembed>=0.5.0",
]

[project.optional-dependencies]
local = ["fastembed>=0.5.0"]  # kept for backwards compat
gnn = ["torch>=2.0.0"]
full = [
    "redis[hiredis]>=5.0.0",
    "falkordb>=1.0.0",
    "voyageai>=0.3.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.21.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "engram[full,local]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0",
]

[project.urls]
Homepage = "https://github.com/Moshik21/engram"
Repository = "https://github.com/Moshik21/engram.git"
Issues = "https://github.com/Moshik21/engram/issues"

[project.scripts]
engram = "engram.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_docker: marks tests requiring Docker services",
    "requires_api_key: marks tests requiring external API keys",
    "requires_local_embeddings: marks tests requiring fastembed",
]
