[workspace]
members = [
    "helix-db",
    "helix-macros",
    "metrics",
    "helix-python",
]
resolver = "2"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 0
codegen-units = 256
lto = false
panic = "abort"
incremental = true
debug = 1
